crates/batchalign/batchalign-cli/tests/snapshots/json_compat__job_result_response.snap
---
source: crates/batchalign-types/tests/json_compat.rs
expression: resp
---
{
  "job_id": "abc-123",
  "status": "completed",
  "files": [
    {
      "filename": "01DM.cha",
      "content": "@UTF8\n@Begin\n*CHI:\thello .\n@End",
      "content_type": "chat"
    },
    {
      "filename": "02DM.cha",
      "content": "",
      "content_type": "chat",
      "error": "Pipeline error: unknown language"
    }
  ]
}
