crates/batchalign/batchalign-cli/tests/snapshots/json_compat__job_status_all_variants.snap
---
source: crates/batchalign-types/tests/json_compat.rs
expression: statuses
---
[
  "queued",
  "running",
  "completed",
  "failed",
  "cancelled",
  "interrupted"
]
