crates/batchalign/batchalign-cli/tests/snapshots/json_compat__process_request.snap
---
source: crates/batchalign-types/tests/json_compat.rs
expression: req
---
{
  "command": "morphotag",
  "lang": "eng",
  "filename": "test.cha",
  "input_text": "@UTF8\n@Begin\n*CHI:\thello .\n@End",
  "num_speakers": 1,
  "kwargs": {
    "override_cache": false,
    "retokenize": false
  }
}
