crates/batchalign/batchalign-cli/tests/snapshots/json_compat__process_response_error.snap
---
source: crates/batchalign-types/tests/json_compat.rs
expression: resp
---
{
  "error": "Pipeline load failed: unknown command",
  "content_type": "chat",
  "filename": "test.cha",
  "elapsed_s": 0.001
}
