crates/batchalign/batchalign-cli/tests/snapshots/json_compat__process_response_success.snap
---
source: crates/batchalign-types/tests/json_compat.rs
expression: resp
---
{
  "output_text": "@UTF8\n@Begin\n*CHI:\thello .\n%mor:\tn|hello .\n@End",
  "content_type": "chat",
  "filename": "test.cha",
  "elapsed_s": 1.234
}
